--- a/Frontend/src/app/pages/home/home.component.html
+++ b/Frontend/src/app/pages/home/home.component.html
@@ -12,7 +12,13 @@
             Choose one of our plans, enter delivery time <br />
             and enjoy delicious food without leaving your home
           </p>
-          <button class="primary-button">Order food</button><br />
+          <button
+            class="primary-button"
+            routerLinkActive="active"
+            routerLink="/products"
+          >
+            Order food</button
+          ><br />
         </div>
       </div>
       <div id="social-container">
@@ -138,7 +144,13 @@
           </p>
         </div>
       </div>
-      <button class="primary-button">Order food</button><br />
+      <button
+        class="primary-button"
+        routerLinkActive="active"
+        routerLink="/products"
+      >
+        Order food</button
+      ><br />
     </div>
   </div>
   <div class="customer-reviews-box">
